[package]
name = "dbless"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "simple key-value store"

[dependencies]
anyhow = "1.0.89"
redb = "2.1.3"
rmp-serde = "1.3.0"
serde = "1.0.210"

[dev-dependencies]
ctor = "0.2.8"
serde = { version = "1.0.210", features = ["derive"] }
